# mutinynet-faucet-rs

./: .env.sample  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  schema.sql
.github/workflows/: docker.yml  test.yml
docs/: admin-api.md  analytics-api.md
src/: admin.rs  analytics.rs  auth.rs  bolt11.rs  channel.rs  l402.rs  lightning.rs  main.rs  nostr_dms.rs  onchain.rs  payjoin.rs  payments.rs  reorg.rs  setup.rs
