[package]
name = "mutinynet-faucet-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.16", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic_lnd = { git = "https://github.com/okjodom/tonic_lnd", branch = "openssl-support" } 
dotenv = "0.15.0"
hex = "0.4.3"
bitcoincore-rpc = "0.17.0"
bitcoin = "0.30.0"
lightning-invoice = "0.23.0"
tower-http = { version = "0.4.0", features = ["cors"] }
