[package]
name = "mutinynet-faucet-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.16", features = ["macros", "headers"] }
bitcoin-waila = "0.3.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic_openssl_lnd = "0.2.0"
dotenv = "0.15.0"
lnurl-rs = "0.4.0"
hex = "0.4.3"
bitcoincore-rpc = "0.17.0"
bitcoin = "0.30.2"
lightning-invoice = "0.27.0"
tower-http = { version = "0.4.0", features = ["cors"] }
payjoin = { version = "0.10.0", features = ["send", "receive", "base64"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
